fix the popup not showing

--- a/style.css
+++ b/style.css
@@ -731,11 +731,14 @@ hr {
 }
 
 .popup {
+  left: 0;
+  top: 0;
   display: flex;
   position: fixed;
   width: 100%;
-  min-height: calc(95vh - 70px);
+  min-height: 100vh;
   background-color: #00000052;
+  z-index: 3;
   align-items: flex-end;
   justify-content: center;
 }
@@ -744,6 +747,7 @@ hr {
   height: 100px;
   width: 95%;
   margin-left: auto;
+  margin-bottom: 10px;
   margin-right: auto;
   border-radius: 25px;
   background-image: linear-gradient(to right, #272747 , #0d0024);
